...
                    .font(.headline)
                    .foregroundColor(Color(UserPreferences.convertColourChoiceToUIColor(colour: preferences.colourChoiceConverted)))
                    .accessibilityIdentifier(AccessibilityIdentifier.Statistics.chartPeriodIdentifiers[index])
                Spacer()
            }
            HStack {
                Text("Distance Cycled")
                Spacer()
                Text(MetricsFormatting.formatDistance(distance: distances[1], usingMetric: preferences.usingMetric))
                    .bold()
                Text(getPercentageString(index: 0))
                    .bold()
                    .foregroundColor(getPercentageChange(index: 0) >= 0 ? .green : .red)
...
